--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Simple URL shortener</description>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>14</java.version>
         <kotlin.version>1.4.10</kotlin.version>
     </properties>
 
@@ -52,11 +52,28 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
+        <finalName>relink</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
