--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ env:
   global:
     - COMMIT=${TRAVIS_COMMIT::7}
 
+before_install:
+  - chmod +x mvnw
+
 after_success:
   - docker login -u $D_USER -p $D_PASS
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
