--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,18 @@ version: '3.9'
 services:
   db:
     image: postgres:latest
-    env_file:
-      - dbconfig.env
+    environment:
+      - POSTGRES_PASSWORD=root
     restart: always
 
   relink:
     image: edwin503/relink:latest
-    env_file:
-      - dbconnect.env
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=root
+      - RELINK_PREFIX=http://localhost/
+      - SERVER_PORT=80
     restart: always
     ports:
       - 80:80
