--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/relinkdark
 spring.datasource.username=postgres
 spring.datasource.password=root
 relink.prefix=http://localhost:8080/
+
+logging.level.root=off
+logging.level.org.springframework.boot=off
+spring.main.banner-mode=off
